--- a/Example.ipynb
+++ b/Example.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "\n",
     "\n",
     "module_name = \"npm_package_name\"\n",
-    "module_version = \"^0.0.0\"\n",
+    "module_version = \"^1.0.0\"\n",
     "\n",
     "class ExampleWidget(DOMWidget):\n",
     "    \"\"\"TODO: Add docstring here\n",
@@ -35,45 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "690bd3ff2ab44215b450ccf92af53097",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "ExampleWidget()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "w = ExampleWidget()\n",
-    "w"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert w.value == 'Hello World'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w.value = 'Hello World 2'"
+    "ExampleWidget(value='test')"
    ]
   },
   {
